--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 						<i class="fab fa-python"></i>
 					</div>
 					<div class="s-box-text">
-						<strong>Python</strong>
-						<p>I am still learning Python</p>
+						<strong>React</strong>
+						<p>I am still learning React</p>
 					</div>
 				</div>
 			</div>
